window-list: Fix spacing in app buttons

--- a/extensions/window-list/stylesheet.css
+++ b/extensions/window-list/stylesheet.css
@@ -22,6 +22,10 @@
   padding-right: 2px;
 }
 
+.window-button-box {
+  spacing: 4px;
+}
+
 .window-button > StWidget {
   -st-natural-width: 250px;
   max-width: 250px;
@@ -31,7 +35,6 @@
   padding: 3px 6px 1px;
   box-shadow: inset 1px 1px 4px rgba(255,255,255,0.5);
   text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
-  spacing: 4px;
 }
 
 .window-button:hover > StWidget {
